--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
     <title>Web Studio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
-      integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="node_modules/modern-normalize/modern-normalize.css"
     />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"
-          ><span class="accent-logo">Web</span>Studio</a
-        >
         <ul class="menu">
+          <li>
+            <a href="./index.html" class="logo"
+              >Web<span class="accent-logo">Studio</span></a
+            >
+          </li>
+
           <li><a class="link" href="">Studio</a></li>
           <li><a class="link" href="">Portfolio</a></li>
           <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul class="contacts">
+      <address class="contacts">
+        <ul>
           <li>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -46,35 +47,35 @@
     </header>
     <main>
       <section class="main-background">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="text-button">Order Service</button>
       </section>
       <section>
         <h2 hidden>Advantages</h2>
         <ul class="section-benefits">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="name">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="name">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="name">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="name">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -82,43 +83,43 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul class="section-team">
-          <li>
+      <section class="section-team">
+        <h2 class="title-team">Our Team</h2>
+        <ul>
+          <li class="list-team">
             <img
               src="./images/img-3.jpg"
-              alt="Mark Guerrero"
+              alt="Photo Mark Guerrero"
               width="264"
               height="260"
             />
             <h3 class="name">Mark Guerrero</h3>
             <p class="text-name">Product Designer</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./images/img-2.jpg"
-              alt="Tom Ford"
+              alt="Photo Tom Ford"
               width="264"
               height="260"
             />
             <h3 class="name">Tom Ford</h3>
             <p class="text-name">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./images/img-1.jpg"
-              alt="Camila Garcia"
+              alt="Photo Camila Garcia"
               width="264"
               height="260"
             />
             <h3 class="name">Camila Garcia</h3>
             <p class="text-name">Marketing</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./images/img.jpg"
-              alt="Daniel Wilson"
+              alt="Photo Daniel Wilson"
               width="264"
               height="260"
             />
@@ -128,7 +129,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="title-portfolio">Our Portfolio</h2>
 
         <ul class="portfolio">
           <li>
@@ -138,8 +139,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="name">Banking App</h3>
+            <p class="text">App</p>
           </li>
 
           <li>
@@ -149,8 +150,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="name">Cashless Payment</h3>
+            <p class="text">Marketing</p>
           </li>
 
           <li>
@@ -160,8 +161,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="name">Meditation App</h3>
+            <p class="text">App</p>
           </li>
 
           <li>
@@ -171,8 +172,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="name">Taxi Service</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -181,8 +182,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="name">Screen Illustrations</h3>
+            <p class="text">Design</p>
           </li>
           <li>
             <img
@@ -191,16 +192,15 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="name">Online Courses</h3>
+            <p class="text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo"
-        ><span class="accent-logo">Web</span
-        ><span class="accent-logo2">Studio</span></a
+        >Web<span class="accent-logo2">Studio</span></a
       >
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
