add hw 2 quest 2

--- a/index.html
+++ b/index.html
@@ -20,16 +20,15 @@
   <body>
     <header>
       <nav>
+        <li>
+          <a href="./index.html" class="logo"
+            >Web<span class="accent-logo">Studio</span></a
+          >
+        </li>
         <ul class="menu">
-          <li>
-            <a href="./index.html" class="logo"
-              >Web<span class="accent-logo">Studio</span></a
-            >
-          </li>
-
-          <li><a class="link" href="">Studio</a></li>
-          <li><a class="link" href="">Portfolio</a></li>
-          <li><a class="link" href="">Contacts</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./index.html">Portfolio</a></li>
+          <li><a class="link" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
@@ -200,7 +199,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >Web<span class="accent-logo2">Studio</span></a
+        >Web<span class="accent-logo-foot">Studio</span></a
       >
       <p class="text-footer">
         Increase the flow of customers and sales for your business with digital
