--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
   <body>
     <header>
       <nav>
-        <li>
-          <a href="./index.html" class="logo"
-            >Web<span class="accent-logo">Studio</span></a
-          >
-        </li>
+        <a href="./index.html" class="logo"
+          >Web<span class="accent-logo">Studio</span></a
+        >
+
         <ul class="menu">
           <li><a class="link" href="./index.html">Studio</a></li>
-          <li><a class="link" href="./index.html">Portfolio</a></li>
-          <li><a class="link" href="./index.html">Contacts</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
